syntax = "proto3";

option csharp_namespace = "Zodiac.Protos";

service SpringZodiacSigns
{
	rpc GetSpringZodiacSign(SpringZodiacSignRequest) returns (SpringZodiacSign);
}

message SpringZodiacSignRequest
{
	string date = 1;
}

message SpringZodiacSign
{
	string sign = 1;
}