syntax = "proto3";

option csharp_namespace = "Zodiac.Protos.SummerZodiacSign";

service SummerZodiacSign
{
	rpc GetZodiacSign(InputDate) returns (ZodiacSign);
}

message InputDate
{
	string date = 1;
}

message ZodiacSign
{
	string zodiacSign = 1;
}